Bug 99678 - Sidebar: New Style created from toolbar in Styles - Page Styles doesn't show it immediately
Summary: Sidebar: New Style created from toolbar in Styles - Page Styles doesn't show ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium minor
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
: 116495 (view as bug list)
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2016-05-04 14:21 UTC by Timur
Modified: 2018-10-09 07:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2016-05-04 14:21:14 UTC
1. Open Sidebar - Styles and Formatting - Page Styles pane.
2. Create New Style... from it's toolbar icon (not from right click)
3. Newly created style is not shown until you refresh the view (by changing to some other pane back and forth).

It may make a confusion. It should be shown immediately as it is via right click creation or when other styles are created.
Comment 1 Buovjaga 2016-05-07 12:07:03 UTC
For me, it was not enough to switch panes. I had to switch the filtering from the dropdown in the bottom (Hierarchical, All, Hidden styles..). It did not matter, if I already had it as "All".

64-bit, KDE Plasma 5
Build ID: 5.1.2.2 Arch Linux build-1
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Comment 2 QA Administrators 2017-10-24 07:00:00 UTC Comment hidden (obsolete)
Comment 3 Timur 2018-05-18 17:23:09 UTC
Still in 6.1+
Comment 4 Xisco Faulí 2018-08-07 14:42:57 UTC
*** Bug 116495 has been marked as a duplicate of this bug. ***
Comment 5 Jim Raykowski 2018-09-02 23:19:39 UTC
Hi All,

Thanks for adding me to this one. 

Here is a patch for review:
https://gerrit.libreoffice.org/#/c/59914/
Comment 6 Commit Notification 2018-10-08 00:39:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94bf82a8ceba41c32cf3620529e6ce8ea94f18c0

tdf#99678 Show style in common template dialog tree box immediatly

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.