tdf#99678 Show style in common template dialog tree box immediatly

...after creation using New Style dialog

Change-Id: Idb24f537fe7be2dfb9660a1a5de0bcd26612affc